--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,9 @@
           <div class="d-flex justify-content-end gap-3 mt-4">
             <button type="submit" class="btn btn-primary">Calculate</button>
             <button type="button" class="btn btn-outline-danger" id="stopBtn">Stop</button>
+            <button type="button" class="btn btn-secondary" id="clearBtn">Clear</button>
           </div>
+
         </form>
 
         <h5 class="mt-5">Output</h5>
