--- a/templates/index.html
+++ b/templates/index.html
@@ -74,13 +74,12 @@
             <label for="url" class="form-label">Login URL</label>
             <select class="form-select" id="url" name="url" required>
               <option value="">-- Select Environment --</option>
+              <option value="https://client.lootrix.live/">Production </option>
               <option value="https://testing.client.lootrix.utwebapps.com/">Testing </option>
               <option value="https://client.lootrix.utwebapps.com/">External </option>
               <option value="https://dev.client.lootrix.utwebapps.com/">Dev </option>
             </select>
           </div>
-
-
         <div class="row g-3">
           <div class="col-md-6">
             <label for="username" class="form-label">Username</label>
